--- a/Dojo_Dashboard/app/views/dojos/index.html.erb
+++ b/Dojo_Dashboard/app/views/dojos/index.html.erb
@@ -14,6 +14,9 @@
 			<td><%= dojo.street %></td>
 			<td><%= dojo.city %></td>
 			<td><%= dojo.state %></td>
+			<td><a href="/dojos/<%= dojo.id %>">Show</a></td>
+			<td><a href="/dojos/<%= dojo.id %>/edit">Edit</a></td>
+			<td><a href="/dojos/<%= dojo.id %>" data-method="delete">Destroy</a></td>
 		</tr>
 		<% end %>
 	</tbody>
