--- a/Dojo_Dashboard/app/views/dojos/new.html.erb
+++ b/Dojo_Dashboard/app/views/dojos/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New Dojo</h1>
 
-<form action='/dojos/' method='post'>
+<form action='/dojos' method='post'>
+<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <input type='text' name='dojo[branch]' placeholder='Dojo Branch'><br>
     <input type='text' name='dojo[street]' placeholder='Dojo Street'><br>
     <input type='text' name='dojo[city]' placeholder='Dojo City'><br>
